# co-write

./: .env  .gitignore  README.md  README_ua.md  docker-compose.yml  draft.md
client/: Dockerfile  README.md  app.js  editor.html  editor.js  index.html  package-lock.json  package.json  socket.js  styles.css  vite.config.js
client/scripts/: editor.js  paths.js  socket.js
client/scripts/core/: paths.js  socket.js
client/scripts/other/: showToast.js  toogleThemes.js
client/scripts/pages/: app.js  editor.js
client/src/: App.jsx  main.jsx
client/src/components/: Breadcrumb.jsx  CollaboratorsPanel.jsx  FileExplorer.jsx  FileTabs.jsx  Minimap.jsx  OutlinePanel.jsx  ProblemsPanel.jsx  SplitPane.jsx  Toast.jsx
client/src/configs/: paths.js
client/src/hooks/: useCollabEditor.js
review/: -issue_catalog.md  2025_10_30_dev_performance_Mariia_Kaduk.md  2025_10_30_dev_performance_Rostyslav_Kashper.md  2025_10_30_project.md
server/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile
server/migrations/: 20251005150008_migr.down.sql  20251005150008_migr.up.sql  20251026223055_rename_state_column.sql  20260607200000_users.down.sql  20260607200000_users.up.sql  20260614120000_member_roles.down.sql  20260614120000_member_roles.up.sql
server/src/: api_doc.rs  app_error.rs  lib.rs  main.rs  startup.rs  telemetry.rs  ws.rs
server/src/app/: mod.rs
server/src/app/controllers/: document_controller.rs  mod.rs  ws_controller.rs
server/src/app/domains/: mod.rs
server/src/app/domains/auth/: controller.rs  mod.rs  models.rs  repository.rs  service.rs  tests.rs
server/src/app/domains/document/: controller.rs  mod.rs  repository.rs  service.rs  ws_handler.rs
server/src/app/domains/document/models/: mod.rs  request.rs  response.rs  rows.rs  ws.rs
server/src/app/domains/execution/: controller.rs  mod.rs  service.rs  tests.rs
server/src/app/domains/execution/models/: mod.rs  request.rs  response.rs
server/src/app/domains/lsp/: controller.rs  mod.rs  models.rs  session.rs
server/src/app/middlewares/: mod.rs
server/src/app/models/: change.rs  mod.rs  ws_rooms.rs
server/src/app/redis/: client.rs  keys.rs
server/src/app/repositories/: document_repository.rs
server/src/app/routers/: docs_routes.rs  document_routes.rs  mod.rs  ws_routes.rs
server/src/app/services/: document_service.rs  mod.rs
server/src/app/utils/: mod.rs  request_error.rs  service_context.rs
server/src/constants/: mod.rs
server/src/core/: app_config.rs  app_data.rs  app_error.rs  config_builder.rs  database.rs  logger.rs  mod.rs  pg_connector.rs  redis_connector.rs  server.rs
server/tests/: auth.rs  execution.rs  health.rs  load.rs  sandbox.rs
server/tests/common/: app.rs  models.rs
(+20 files in other folders)
