[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
actix-cors = "0.7.1"
actix-web = "4.11.0"

sqlx = { version = "0.8.6", features = ["chrono", "postgres", "uuid"] }
uuid = "1.18.1"
chrono = "0.4.42"
dotenvy = "0.15.7"
thiserror = "2.0.17"
