[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
actix-cors = "0.7.1"
actix-web = "4.11.0"
actix-ws = "0.2"
actix-rt = "2"
futures-util = "0.3"

sqlx = { version = "0.8.6", features = ["runtime-tokio", "chrono", "postgres", "uuid"] }
uuid = { version = "1.18.1", features = ["serde"]}
chrono = "0.4.42"
dotenvy = "0.15.7"
thiserror = "2.0.17"

automerge = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
dashmap = "6.1"

tracing = "0.1.19"
tracing-log = "0.2.0"
tracing-actix-web = "0.7"
tracing-subscriber = { version = "0.3", features = [
    "registry", "env-filter", "json"
] }
utoipa = { version = "5.4.0", features = ["actix_extras", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }

utoipa = "5.4.0"
utoipa-actix-web = "0.1.2"
utoipa-swagger-ui = "9.0.2"
