[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = "0.7"
actix-cors = "0.7.1"
actix-web = "4.11.0"
actix-ws = "0.2"
actix-rt = "2"
futures-util = "0.3"

sqlx = { version = "0.8.6", features = ["runtime-tokio", "chrono", "postgres", "uuid"] }
uuid = { version = "1.18.1", features = ["serde", "v7"] }
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
thiserror = "2.0.17"

automerge = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
dashmap = "6.1"

tracing = "0.1.19"
tracing-log = "0.2.0"
tracing-actix-web = "0.7"
tracing-subscriber = { version = "0.3", features = [
    "registry", "env-filter", "json"
] }
utoipa = { version = "5.4.0", features = ["actix_extras", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
tempfile = "3.10"

config = "0.15"
serde_with = { version = "=3.11.0", features = ["macros"] }
anyhow = "1.0"
redis = { version = "0.25", features = ["tokio-comp"] }
deadpool-redis = "0.15"
base64 = "0.22"

jsonwebtoken = "9"
argon2 = "0.5"
tar = "0.4"
xz2 = "0.1"
rand = "0.8"

# Pin transitive dependencies for compatibility with rustc 1.85 inside Docker container
time = "=0.3.36"
darling = "=0.20.10"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }